# poetry-pytest

./: README.md  pyproject.toml
poetry_pytest_demo/: main.py
poetry_pytest_demo/db/: session.py
poetry_pytest_demo/db/model/: base.py  person.py
poetry_pytest_demo/queries/: person.py
tests/: conftest.py
tests/queries/: test_person.py
