[tool.poetry]
name = "poetry-pytest-demo"
version = "0.1.0"
description = ""
authors = ["pytest <dev@pytest.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.41"
psycopg = {extras = ["binary"], version = "^3.2.9"}
pydantic = "^2.11.7"
mysql-connector-python = "^9.3.0"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
